<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ECIDemoApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logintip">Please login to the POS system</string>
    <string name="entercode">Please enter the guest\'s 4 digit code below</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enviroment">PayPal Environment</string>
    <string name="title_activity_code">CodeActivity</string>
    <string name="invalid_credentials">Please enter a valid username and password</string>
    <string name="title_activity_oauth_login">OAuthLoginActivity</string>
    <string name="title_address_1">Address 1</string>
    <string name="title_address_2">Address 2</string>
    <string name="title_city">City</string>
    <string name="title_state">State</string>
    <string name="title_country">Country</string>
    <string name="title_zip">ZIP</string>
    <string name="title_activity_sale_screen">SaleScreenActivity</string>
    <string name="cust_name_label">Cust ID</string>
    <string name="total_bill_label">Bill Details</string>
    <string name="total_label">Sub Total</string>
    <string name="tip_label">Tip</string>
    <string name="loyalty_label">Loyalty Member</string>
    <string name="loyalty_balance_label">Loyalty Balance</string>
    <string name="loyalty_discount_label">Loyalty Discount</string>
    <string name="grand_total_label">Total</string>
    <string name="apply_loyalty">Apply Loyalty</string>
    <string name="settle_label">Charge</string>
    <string name="confirmation_message">Are you sure you would like to settle the transaction?</string>
    <string name="create_invoice">Create Invoice</string>
    <string name="sale_button">Payment</string>
    <string name="invoice_number_label">Inv Number</string>
    <string name="title_activity_post_sale">PostSaleActivity</string>
    <string name="TX_complete_Title">Transaction Complete</string>
    <string name="tx_label">TX Label</string>
    <string name="new_loy_balance">New Balance</string>
    <string name="btn_return_to_code">Return Home</string>

</resources>
