<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="karlh.ecidemoapp.activity.SaleScreenActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cust_name_label"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/txtCustName"
        android:textStyle="bold"
        android:textColor="#ff0d5dff"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/txtSubTotal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/total_bill_label"
        android:id="@+id/textView2"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/txtSubTotal"
        android:layout_alignTop="@+id/txtComTX"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/total_label"
        android:id="@+id/txtComTX"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tip_label"
        android:id="@+id/textView4"
        android:layout_below="@+id/txtSubTotal"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/txtTipAmount"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignStart="@+id/txtSubTotal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/loyalty_label"
        android:id="@+id/txtComTotal"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/txtLoyaltyMember"
        android:textStyle="bold"
        android:textColor="#ff0d5dff"
        android:layout_below="@+id/txtCustName"
        android:layout_alignEnd="@+id/txtCustName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/loyalty_balance_label"
        android:id="@+id/textView6"
        android:textSize="14sp"
        android:layout_below="@+id/txtComTotal"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/txtLoyaltyBalance"
        android:textStyle="bold"
        android:textColor="#ffff000b"
        android:layout_below="@+id/txtLoyaltyMember"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/loyalty_discount_label"
        android:id="@+id/textView8"
        android:layout_below="@+id/txtTipAmount"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/txtLoyaltyDiscount"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignStart="@+id/txtTipAmount" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/grand_total_label"
        android:id="@+id/textView9"
        android:layout_below="@+id/txtLoyaltyDiscount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/txtGrandTotal"
        android:layout_alignTop="@+id/textView9"
        android:layout_alignParentEnd="true"
        android:textColor="#ff2aff29" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_loyalty"
        android:id="@+id/btnApplyLoyalty"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:enabled="true"
        android:layout_alignEnd="@+id/textView8" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_invoice"
        android:id="@+id/btnCreateInvoice"
        android:enabled="true"
        android:layout_alignTop="@+id/btnApplyLoyalty"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sale_button"
        android:id="@+id/btnSale"
        android:layout_alignBottom="@+id/btnApplyLoyalty"
        android:layout_toRightOf="@+id/btnCreateInvoice"
        android:layout_alignEnd="@+id/txtGrandTotal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/invoice_number_label"
        android:id="@+id/txtNewBalance"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtInvNumber"
        android:layout_alignTop="@+id/txtNewBalance"
        android:layout_alignEnd="@+id/txtGrandTotal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="TX Label"
        android:id="@+id/textView10"
        android:layout_below="@+id/txtNewBalance"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtTXNumber"
        android:layout_below="@+id/txtInvNumber"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/textView9" />
</RelativeLayout>
